syntax = "proto3";

package ua.marchenko.internal.input.reqreply.auction;

import "ua/marchenko/commonmodels/error.proto";
import "ua/marchenko/commonmodels/auction/auction.proto";
import "ua/marchenko/commonmodels/general/big_decimal.proto";
import "google/protobuf/timestamp.proto";

option java_multiple_files = true;

message CreateAuctionRequest {
  string artwork_id = 1;
  commonmodels.general.BigDecimal start_bid = 2;
  google.protobuf.Timestamp started_at = 3;
  google.protobuf.Timestamp finished_at = 4;
}

message CreateAuctionResponse {

  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {
    commonmodels.auction.Auction auction = 1;
  }

  message Failure {
    string message = 100;

    oneof error {
      commonmodels.Error invalid_auction_operation = 1;
    }
  }
}
